--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -7,7 +7,9 @@ background: '/img/posts/2022-09-22-align-lit.jpg'
 
 ## Alignment Literature Search
 
-Getting backing into web development for the Stampy UI and working on the semantic search have been rewarding. Since we functioned well together as a team, a number of software engineers have decided to turn full-time on AGI Safety & Alignment to form the [Alignment Ecosystem Development](https://alignment.dev/) group. I'm really excited to start on a new project with them, taking the [Alignment Research Dataset](https://github.com/moirage/alignment-research-dataset) developed by Jan Kirchner, Logan Smith, and Jaques Thibodeau to be searchable for AI alignment researchers. In the meantime, I've also been attending a weekly to biweekly [AGI Safety Fundamentals](https://www.agisafetyfundamentals.com/ai-alignment-curriculum) reading group.
+The field of AI Safety & Alignment is a new and very fluid field of study. There's been an influx of recent research which makes it a daunting task for those interested in entering the field to get a good overview of the landscape and directions.
+
+For the last few months, getting backing into web development for the Stampy UI and working on the semantic search have been rewarding. Since we functioned well together as a team, a number of software engineers have decided to turn full-time on AGI Safety & Alignment to form the [Alignment Ecosystem Development](https://alignment.dev/) group. I'm really excited to start on a new project with them, taking the [Alignment Research Dataset](https://github.com/moirage/alignment-research-dataset) to be searchable for AI alignment researchers. This is my excuse er chance to get better acquainted with research literature while also working with some NLP techniques. In the meantime, I've also been attending a weekly to biweekly [AGI Safety Fundamentals](https://www.agisafetyfundamentals.com/ai-alignment-curriculum) reading group.
 
 Between the reading group and researching for the next project, I'm rapidly drowning in my random piles of handwritten notes. For now, I'll be using various parts of this site and specificially this page to organize meandering thoughts and track progress, which will likely remain in a state of flux for some time.
 
@@ -23,7 +25,7 @@ Between the reading group and researching for the next project, I'm rapidly drow
 - [Milvus: Vector Database Built for Scalable Similarity Search](https://milvus.io/) [[GitHub]](https://github.com/milvus-io/milvus)
 - [Pinecone: Vector Database for ML Applications](https://www.pinecone.io/learn/) [[GitHub]](https://github.com/pinecone-io)
 
-## Extras
+## Open Domain Q&A
 
 - [Generate rather than Retrieve: Large Language Models are Strong Context Generators](https://arxiv.org/abs/2209.10063)
 - [Generation-Augmented Retrieval for Open-domain Question Answering](https://arxiv.org/abs/2009.08553)
