add refs to db apps

--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -21,13 +21,18 @@ Between the reading group and researching for the next project, I'm rapidly drow
 - [SCIBERT: A Pretrained Language Model for Scientific Text](https://arxiv.org/abs/1903.10676v3) [[GitHub]](https://github.com/allenai/scibert) (2019)
 - [S2ORC: The Semantic Scholar Open Research Corpus](https://arxiv.org/abs/1903.10676v3) [(GitHub)](https://github.com/allenai/s2orc) (2019)
 - [Construction of the Literature Graph in Semantic Scholar](https://arxiv.org/abs/1805.02262) (2018)
-- [ACL2020 Tutorial: Open-Domain Question Answering](https://aclanthology.org/2020.acl-tutorials.8/) [[GitHub]](https://github.com/danqi/acl2020-openqa-tutorial) (2020)
-- [Milvus: Vector Database Built for Scalable Similarity Search](https://milvus.io/) [[GitHub]](https://github.com/milvus-io/milvus)
-- [Pinecone: Vector Database for ML Applications](https://www.pinecone.io/learn/) [[GitHub]](https://github.com/pinecone-io)
 
 ## Open Domain Q&A
 
+- [ACL2020 Tutorial: Open-Domain Question Answering](https://aclanthology.org/2020.acl-tutorials.8/) [[GitHub]](https://github.com/danqi/acl2020-openqa-tutorial) (2020)
 - [Generate rather than Retrieve: Large Language Models are Strong Context Generators](https://arxiv.org/abs/2209.10063)
 - [Generation-Augmented Retrieval for Open-domain Question Answering](https://arxiv.org/abs/2009.08553)
 - [Dense Passage Retrieval for Open-Domain Question Answering](https://arxiv.org/abs/2004.04906)
 - [Reading Wikipedia to Answer Open-Domain Questions](https://arxiv.org/abs/1704.00051)
+
+## Vector Databases and Building ML Apps
+
+- [Milvus](https://milvus.io/) [[GitHub]](https://github.com/milvus-io/bootcamp)
+- [Pinecone](https://www.pinecone.io/learn/) [[GitHub]](https://github.com/pinecone-io)
+- [gradio](https://www.gradio.app/getting_started/) [[GitHub]](https://github.com/gradio-app)
+- [streamlit](https://docs.streamlit.io/library/get-started) [[GitHub]](https://github.com/streamlit)
