--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -32,7 +32,7 @@ Between the reading group and researching for the next project, I'm rapidly drow
 
 ## Vector Databases and Building ML Apps
 
-- [Milvus](https://milvus.io/) [[GitHub]](https://github.com/milvus-io/bootcamp)
-- [Pinecone](https://www.pinecone.io/learn/) [[GitHub]](https://github.com/pinecone-io)
+- [milvus](https://milvus.io/) [[GitHub]](https://github.com/milvus-io/bootcamp)
+- [pinecone](https://www.pinecone.io/learn/) [[GitHub]](https://github.com/pinecone-io)
 - [gradio](https://www.gradio.app/getting_started/) [[GitHub]](https://github.com/gradio-app)
 - [streamlit](https://docs.streamlit.io/library/get-started) [[GitHub]](https://github.com/streamlit)
