--- a/_posts/2023-03-22-wtm-iwd.md
+++ b/_posts/2023-03-22-wtm-iwd.md
@@ -13,14 +13,30 @@ Are you a woman in tech? Do you want to hear from other creative and talented wo
 
 The 6-hour event featured keynote speeches, panel discussions, and even a job board filled with potential job opportunities for creative tech roles.
 
-| title | speakers |
-| :---  | :------ |
-| Dare to Bring Diversity to Web 3.0 | Opening Keynote: Tina Bonner<br>CEO & Founder Black in Meta
-| Embracing Creativity in Tech | Panelists: Kavitha Bangalore and Raj Sree<br>Moderator: ChengCheng Tan
-| Break and Job Jam! |
-| Creative Tech Corner | Vaishnavi Subramaniam and Ashley Clayton
-| The Daring Mindset: Design Thinking | Panelists: Kaylyn Hill and Michelle Ng<br>Moderator: ChengCheng Tan
-| Daring to be Non-Traditional Secured Me a Job | Closing Keynote: Alaa Shahin<br>UX Designer at Univ of Michigan
+Opening: Dare to Bring Diversity to Web 3.0
+: (10 am PDT / 12pm CDT / 1pm EDT)
+: Keynote Speaker: Tina Bonner, CEO & Founder Black in Meta
+
+Embracing Creativity in Tech
+: (11 am PDT / 1pm CDT / 2pm EDT)
+: Panelists: Kavitha Bangalore and Raj Sree
+: Moderator: ChengCheng Tan
+
+Break and Job Jam!
+: (12pm PDT / 2pm CDT / 3pm EDT)
+
+Creative Tech Corner
+: (1pm PDT / 3pm CDT / 4pm EDT)
+: Speakers: Vaishnavi Venkata Subramaniam and Ashley Clayton
+
+The Daring Mindset: Design Thinking
+: (2pm PDT / 4pm CDT / 5pm EDT)
+: Panelists: Kaylyn Hill and Michelle Ng
+: Moderator: ChengCheng Tan
+
+How Daring to be Non-Traditional Secured Me a Job
+: (3pm PDT / 5pm CDT / 6pm EDT)
+: Keynote Speaker: Alaa Shahin, UX Designer at Univ of Michigan
 
 We had an amazing turnout, with over 140 registrations on [EventBrite](https://www.eventbrite.com/e/dare-to-be-creative-in-tech-tickets-560933706817). [Gatheround](https://gatheround.com/), as our platform, was perfect for adding a creative touch and allowing for an interactive experience.
 
