post winograd schemas

--- a/_posts/2022-05-25-winograd.md
+++ b/_posts/2022-05-25-winograd.md
@@ -17,6 +17,8 @@ Let's take a journey through time to understand the evolution of NLP models. In 
 
 This quote captures the essence of why statistical and probabilistic models work well when building language models. These models consider the nearby neighbors, syntax, rules of parts of speech, and semantic relationships within the context. However, it's essential to clarify that language models are not designed for true understanding. Instead, they focus on predicting the probability of the next word in a given sequence.
 
+Upon the introduction of Transformers, models are grouped into 3 classes:
+
 Encoder-Decoder Models
 : Within the realm of NLP, there are different architectures for language models. The encoder-decoder models, also known as many-to-many (Seq2Seq), excel in tasks such as machine translation, text summarization, and question answering. Examples of these models include T5 and BART.
 
@@ -60,4 +62,10 @@ As researchers and developers continue to push the boundaries of NLP and AI, the
 
 In conclusion, the Winograd Schema Challenge stands as a testament to the ever-evolving landscape of NLP. It prompts us to question, explore, and push the boundaries of AI.
 
-- [slides](/docs/JournalClub%202022-05-25%20NLP.pdf)
+## Resources
+- [2022-05-25 Presentation Slides](/docs/JournalClub%202022-05-25%20NLP.pdf)
+- [The Most Human Human](https://www.goodreads.com/book/show/8884400-the-most-human-human)
+- [The Winograd Schema Challeng](http://commonsensereasoning.org/2011/papers/Levesque.pdf )
+- [GLUE Benchmark](https://gluebenchmark.com/)
+- [SuperGLUE](https://super.gluebenchmark.com/)
+- [The Defeat of the Winograd Schema Challenge](https://arxiv.org/abs/2201.02387)
