--- a/_posts/2022-05-25-winograd.md
+++ b/_posts/2022-05-25-winograd.md
@@ -11,7 +11,7 @@ In preparation to attend the retirement of an world-reknwn Linguistics professor
 
 ## Reverse Timeline
 
-Let's take a journey through time to understand the evolution of NLP models. In 2017, large language models, specifically Transformers, made a significant impact. Before that, in the 2010s, probabilistic models like neural networks, RNNs, GRUs, and LSTMs took the center stage. Moving further back, in the 1990s, statistical models utilizing n-gram co-occurrence were prevalent. And in the pre-90s era, rule-based systems ruled the domain.
+Let's begin in 2017, specifically Transformers, made a significant impact. Before that, in the 2010s, probabilistic models like neural networks, RNNs, GRUs, and LSTMs took the center stage. Moving further back, in the 1990s, statistical models utilizing n-gram co-occurrence were prevalent. And in the pre-90s era, rule-based systems ruled the domain.
 
 > "You shall know a word by the company it keeps" - J.R. Firth, Linguist
 
@@ -42,13 +42,13 @@ The Winograd Schema Challenge consists of 273 pairs of sentences, each posing a 
 
 One of the key advantages of the Winograd Schema Challenge is that it allows non-experts to determine whether a program fails or succeeds in resolving the sentence pairs. It offers a clearer assessment of a model's ability to comprehend common sense and reason logically.
 
-## Pitfalls - The Quest for Precision
+## Pitfalls
 
 While the Winograd Schema Challenge presents an exciting opportunity to evaluate common sense reasoning, it is not without its challenges. One common pitfall is that the challenge can be too easy or too ambiguous, making it difficult to gauge the true capabilities of a model. To overcome this, benchmarks like GLUE and SuperGLUE have been introduced to provide more comprehensive evaluations.
 
 Additionally, the evaluation criteria for the Winograd Schema Challenge can sometimes be too lax, and the creation of high-quality challenges manually poses its own set of difficulties. There may also be artifacts within the datasets that need to be addressed to ensure accurate assessments. Furthermore, leakage from large training data can inadvertently influence a model's performance, impacting the integrity of the evaluation.
 
-## Surveying Related Datasets
+## Surveying Datasets
 
 To further explore the realm of common sense reasoning, several related datasets have been developed. These include the Winograd Natural Language Inference Dataset (WNLI) and SuperGLUE's WSC. Other datasets like Definite Pronoun Resolution (DPR), Pronoun Disambiguation Problem (PDP), WinoGender & WinoBias, WinoGrande, WinoFlexi, Winventor, WinoWhy & WinoLogic, and WinoMT & Wino-X expand the scope and depth of common sense evaluations. Moreover, these datasets have been extended to different languages such as French, Portuguese, Japanese, Chinese, Hindi, Slovene, and Hebrew.
 
@@ -63,6 +63,7 @@ As researchers and developers continue to push the boundaries of NLP and AI, the
 In conclusion, the Winograd Schema Challenge stands as a testament to the ever-evolving landscape of NLP. It prompts us to question, explore, and push the boundaries of AI.
 
 ## Resources
+
 - [2022-05-25 Presentation Slides](/docs/JournalClub%202022-05-25%20NLP.pdf)
 - [The Most Human Human](https://www.goodreads.com/book/show/8884400-the-most-human-human)
 - [The Winograd Schema Challeng](http://commonsensereasoning.org/2011/papers/Levesque.pdf )
