post agi book reviews

--- a/_posts/2022-05-25-winograd.md
+++ b/_posts/2022-05-25-winograd.md
@@ -64,7 +64,7 @@ In conclusion, the Winograd Schema Challenge stands as a testament to the ever-e
 
 ## Resources
 
-- [2022-05-25 Presentation Slides](/docs/JournalClub%202022-05-25%20NLP.pdf)
+- [2022-05-25 Presentation on Winograd Schemas](/docs/JournalClub%202022-05-25%20NLP.pdf)
 - [The Most Human Human](https://www.goodreads.com/book/show/8884400-the-most-human-human)
 - [The Winograd Schema Challeng](http://commonsensereasoning.org/2011/papers/Levesque.pdf )
 - [GLUE Benchmark](https://gluebenchmark.com/)
