--- a/_posts/2022-06-14-sbert.md
+++ b/_posts/2022-06-14-sbert.md
@@ -63,7 +63,7 @@ Here's a sample output of the top scoring duplicates when we first ran paraphras
 
 The complete functional code in this [notebook](https://colab.research.google.com/github/ccstan99/ccstan99.github.io/blob/main/docs/sbert-paraphrase-mining.ipynb). As you will see, the usage is straightforward for any list of sentences from your own dataset. Pick a model and try it out!
 
-## References
+## Resources
 
 - [Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks](https://arxiv.org/abs/1908.10084) (2019)
 - [BERT: Bidirectional Encoder Representation for Transformers](https://arxiv.org/abs/1810.04805) (2018)
