--- a/_posts/2022-07-05-use.md
+++ b/_posts/2022-07-05-use.md
@@ -111,7 +111,7 @@ That's the general setup. In the meantime, feel free to play around with the [pr
 
 I've been studying machine learning for a while now, but it's been mostly theory and isolated exercises. This was refreshing to finally get back to some hands on work, applying the technology in a practical setting. I was lucky to work on this project with smart people who set up the fundamental framework and gave me freedom to explore on my own. Eventually, I'd love to train my own model and tweak some other parameters to see if we can get better results. So many possibilities for continued tinkering and learning!
 
-## References
+## Resources
 
 - [Universal Sentence Encoder](https://arxiv.org/abs/1803.11175) (2018)
 - [Google AI for JavaScript developers with Tensorflow.js](https://www.edx.org/course/google-ai-for-javascript-developers-with-tensorflowjs)
