--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -13,7 +13,7 @@ For the last few months, getting backing into web development for the Stampy UI 
 
 Between the reading group and researching for the next project, I'm rapidly drowning in my random piles of handwritten notes. For now, I'll be using various parts of this site and specificially this page to organize meandering thoughts and track progress, which will likely remain in a state of flux for some time.
 
-## References
+## Resources
 
 - [Understanding AI Alignment Research: A Systematic Analysis](https://arxiv.org/abs/2206.02841) [[GitHub]](https://github.com/moirage/alignment-research-dataset) (2022)
 - [SPECTER: Document-level Representation Learning using Citation-informed Transformers](https://arxiv.org/abs/2004.07180) [[GitHub]](https://github.com/allenai/specter) (2020)
