--- a/_posts/2023-05-10-google-io.md
+++ b/_posts/2023-05-10-google-io.md
@@ -7,7 +7,7 @@ background: '/img/posts/2023-05-10-io.svg'
 
 [Google I/O 2023](https://io.google/2023/) proved to be a memorable experience in so many ways!
 
-## Pre-Reception in Santa Clara
+## Pre-Reception
 
 The event kicked off with the Women Techmakers Ambassadors at the pre-reception on Tuesday evening. It was such an exciting moment to finally meet and connect with Creatives in Tech in person. We were buzzing with anticipation, eager to learn from each other and soak up all the knowledge and inspiration that awaited us.
 
