post tf draft, re-src ai safety talk

--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -11,7 +11,7 @@ I was recently asked to work on the Stampy project, an FAQ about AGI Safety & Al
 
 In any case, I was thrilled to work on something related to AI. Coincidentally, I just took a detour into reading quite a bit about AGI Safety and Alignment lately. To start, I was given the [Excalidraw sketch](https://excalidraw.com/) below with all the features and the general idea of what they wanted for their website.
 
-><img src="/img/posts/2022-03-15-stampy-sketch.png" width="70%" style="border:1px solid #ccc; display: block; margin: 0 auto;" />
+![Original Requirements Sketch](/img/posts/2022-03-15-stampy-sketch.png)
 
 ## Prototype
 
@@ -23,13 +23,13 @@ The existing logo was much beloved within the community. However, I wanted to cl
 
 | redesigned logo | original logo |
 | :-------------: | :-----------: |
-| <img src="/img/posts/2022-03-15-stampy-logo2.png" width="200"/> | <img src="/img/posts/2022-03-15-stampy-logo1.png" width="200"/> |
+| <img src="/img/posts/2022-03-15-stampy-logo2.png" class="cols-2"/> | <img src="/img/posts/2022-03-15-stampy-logo1.png" class="cols-2"/> |
 
 ## Results
 
 Overall, I tried to keep the design clean and minimalistic, allowing users to focus on the content. To add a bit of fun, the icons switch from black & white into full color on hover. The banner is decorated with colorful geometric figures which actually form a secret message. Here's final mockup with the new logo.
 
-[<img src="/img/posts/2022-03-15-stampy-preview.png" width="70%" style="border:1px solid #ccc; display: block; margin: 0 auto;" />](https://ui.stampy.ai/)
+[![Stampy.AI Preview](/img/posts/2022-03-15-stampy-preview.png)](https://stampy.ai/)
 
 Edited to add: We had a [soft launch](https://www.lesswrong.com/posts/auPkxnLb3R9vXjEzo/all-agi-safety-questions-welcome-especially-basic-ones) for the [alpha version](https://ui.stampy.ai) in July. I also wrote about working on their [semantic search](/2022/07/05/use.html) and identifying [duplicate questions](/2022/06/14/sbert.html). If you're interested in getting involved with AGI Safety and Alignment or would like to get work on some [open source projects](https://github.com/StampyAI), please join our [Discord group](https://stampy.ai/wiki/Discord_invite)!
 
