--- a/_posts/2022-05-25-winograd.md
+++ b/_posts/2022-05-25-winograd.md
@@ -37,9 +37,10 @@ Thus, [Winograd Schema Challenge (WSC)](http://commonsensereasoning.org/2011/pap
 For example, consider the original Winograd Schema: "The town council members refused to give the angry demonstrators a permit because they feared/advocated violence." The question is, who feared/advocated violence? The answer could be either the town council members or the angry demonstrators, depending on the word choice.
 
 The Winograd Schema Challenge consists of 273 pairs of sentences, each differing by just 1-2 words. The challenge requires knowledge and common sense reasoning to accurately determine the correct interpretation of the ambiguous references in the sentences.
+
 1. While the pairs of sentences are easily understandable for humans,
 2. They cannot be easily solved using simple techniques.
-3. WSC is designed to be "Google-proof," meaning that there are no obvious statistical patterns to exploit.
+3. Designed to be "Google-proof" with no obvious statistical patterns to exploit.
 
 The success or failure of a program in the challenge is readily apparent to non-experts, making it a straightforward evaluation measure for assessing the capabilities of AI systems.
 
