--- a/_posts/2022-08-11-ai4all.md
+++ b/_posts/2022-08-11-ai4all.md
@@ -9,7 +9,7 @@ background: '/img/posts/2022-08-11-ai4all.jpg'
 
 [AI4ALL](https://ai-4-all.org/) opens doors to Artificial Intelligence for historically excluded talent through education and mentorship. They conduct [summer programs](https://ai-4-all.org/summer-programs/) at universities across the US and offer extensive support to the alumni through their [Changemakers in AI](https://ai-4-all.org/changemakers/) program.
 
-<img src="/img/posts/2022-08-11-ai4all1.png" width="100%" style="border:1px solid #eee" />
+![AI4ALL](/img/posts/2022-08-11-ai4all1.png)
 
 ## Summer Program
 
@@ -21,8 +21,9 @@ Soon, I found myself following along, learning these new concepts through their 
 
 Students were divided into 3 areas of interest: numeric, text, and images then paired with mentors having relevant experience. My mentees worked on natural language processing tasks, using BERT to classify text. I created a couple videos below and also wrote a [tutorial notebook](https://colab.research.google.com/github/ccstan99/ccstan99.github.io/blob/main/docs/huggingface-text-classification.ipynb) to help get them started.
 
-[<img src="/img/posts/2022-08-11-ai4all-video1.svg" width="45%" />](https://www.youtube.com/watch?v=Q3N7zoIcjtw&list=PLSGYwl5_qS6jEhXHXuEymvNYvrFuD2BOG&index=1)
-[<img src="/img/posts/2022-08-11-ai4all-video2.svg" width="45%" />](https://www.youtube.com/watch?v=bedJ9bQBG6s&list=PLSGYwl5_qS6jEhXHXuEymvNYvrFuD2BOG&index=2)
+[![What is NLP?](/img/posts/2022-08-11-ai4all-video1.svg)](https://www.youtube.com/watch?v=Q3N7zoIcjtw&list=PLSGYwl5_qS6jEhXHXuEymvNYvrFuD2BOG&index=1)
+
+[![What are Transformers?](/img/posts/2022-08-11-ai4all-video2.svg)](https://www.youtube.com/watch?v=bedJ9bQBG6s&list=PLSGYwl5_qS6jEhXHXuEymvNYvrFuD2BOG&index=2)
 
 Since AI4ALL has a rigorous applicant screening process, all the participants were very bright and motivated, which led to a very reward mentoring experience.
 
