--- a/_posts/2023-03-22-wtm-iwd.md
+++ b/_posts/2023-03-22-wtm-iwd.md
@@ -7,7 +7,7 @@ background: '/img/posts/2023-03-22-iwd.jpg'
 
 Are you a woman in tech? Do you want to hear from other creative and talented women in the industry? Look no further than the Women Techmakers Ambassador community, Creatives in Tech! On March 22nd, we celebrated International Women's Day by hosting a virtual event that highlighted the experiences of creative women in tech.
 
-<img src="/img/posts/2023-03-22-iwd-promo.jpg" width="100%"/>
+![promo](/img/posts/2023-03-22-iwd-promo.jpg)
 
 ## Our Event
 
@@ -44,7 +44,7 @@ We had an amazing turnout, with over 140 registrations on [EventBrite](https://w
 
 It was an immense honor to befriend so many smart and talented Women Techmaker Ambassadors. Our team of 12 volunteers and 9 speakers worked together to create a comprehensive plan that included a general run of show and weekly meetings starting in mid-January. Kaylyn spearheaded the event, guided us withe her vision, and provided extensive planning documents to keep everything on track. Michelle, our wonderful head of marketing, put together a social media toolkit and recruited backend volunteers. I offered input from the early stages and became more active as an organizer towards the end of February, taking time off work to ensure that everything went smoothly. All the volunteers and speakers actively contributed ideas and ultimately formed a sisterly bond.
 
-<img src="/img/posts/2023-03-22-iwd-photobooth.png" width="100%"/>
+![photobooth](/img/posts/2023-03-22-iwd-photobooth.png)
 
 ## Join Our Community
 
