--- a/_drafts/2022-08-01-gpt.md
+++ b/_drafts/2022-08-01-gpt.md
@@ -5,7 +5,7 @@ subtitle: "OpenAI's Generative Pre-trained Transformers"
 background: '/img/posts/2022-08-01-gpt.jpg'
 ---
 
-## References
+## Resources
 
 - [The Journey of Open AI GPT models](https://medium.com/walmartglobaltech/the-journey-of-open-ai-gpt-models-32d95b7b7fb2)
 - GPT-3: [Language Models are Few-Shot Learners](https://arxiv.org/abs/2005.14165)
