--- a/_posts/2022-03-15-stampy.md
+++ b/_posts/2022-03-15-stampy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Stampy UI
+title: Stampy AI FAQs
 subtitle: Figma Prototype & Identity Design
 background: '/img/posts/2022-03-15-stampy.jpg'
 ---
