--- a/_posts/2022-08-11-ai4all.md
+++ b/_posts/2022-08-11-ai4all.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "AI4ALL"
-subtitle: "Summer Portfolio Project Mentoring"
+title: "AI4ALL Mentoring"
+subtitle: "Summer Portfolio Project"
 background: '/img/posts/2022-08-11-ai4all.jpg'
 ---
 
