--- a/_posts/2023-05-10-google-io.md
+++ b/_posts/2023-05-10-google-io.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Google I/O 2023"
-subtitle: "Creatives in Tech Reunion"
+subtitle: "WTM Creatives in Tech Reunion"
 background: '/img/posts/2023-05-10-io.svg'
 ---
 
