--- a/_posts/2022-06-14-sbert.md
+++ b/_posts/2022-06-14-sbert.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Find Duplicates with SBERT"
-subtitle: "Sentence-BERT Paraphrase Mining"
+subtitle: "Sentence Transformers Paraphrase Mining"
 background: '/img/posts/2022-06-14-sbert.jpg'
 ---
 
