--- a/_posts/2022-07-05-use.md
+++ b/_posts/2022-07-05-use.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Semantic Search in Browser"
-subtitle: "Universal Sentence Encoder with Tensorflow.js"
+subtitle: "Universal Sentence Encoder + Tensorflow.js"
 background: '/img/posts/2022-07-05-use.jpg'
 ---
 
