post chatbot prototype

--- a/_posts/2022-09-22-align-lit.md
+++ b/_posts/2022-09-22-align-lit.md
@@ -13,6 +13,16 @@ For the last few months, getting backing into web development for the Stampy UI 
 
 Between the reading group and researching for the next project, I'm rapidly drowning in my random piles of handwritten notes. For now, I'll be using various parts of this site and specificially this page to organize meandering thoughts and track progress, which will likely remain in a state of flux for some time.
 
+## Prototypes and Notes
+
+Ultimately, I was able to create a few prototypes to demo:
+
+- [Semantic Search for Similar Stampy FAQs](http://nlp.stampy.ai)
+- [Search Literature Abstracts & Summaries](https://nlp.stampy.ai/literature)
+- [Extract Answers from Literature](https://nlp.stampy.ai/extract)
+
+These are deployed on Google Cloud Run. This project gave me an excuse to learn about Google Cloud Platform (GCP) and take some Coursera classes by Google on Cloud Computing and App Engineering. It was fascinating, and I learned enough to get my prototypes deployed. Unfortunately, much of reminded me of my tortuous days in IT doing sysadmin, so I was lucky enough to find a knowledgeable guru to save me from my misery.
+
 ## Resources
 
 - [Understanding AI Alignment Research: A Systematic Analysis](https://arxiv.org/abs/2206.02841) [[GitHub]](<https://github.com/moirage/alignment-research-dataset>) (2022)
